--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,12 @@
   "dependencies": {
     "@deck.gl/core": "^8.9.35",
     "@deck.gl/google-maps": "^8.9.35",
+    "@deck.gl/layers": "^8.9.35",
     "@emotion/cache": "11.10.8",
     "@emotion/react": "11.10.8",
     "@emotion/styled": "11.10.8",
+    "@loaders.gl/core": "^3.4.15",
+    "@loaders.gl/shapefile": "^4.1.3",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
     "chart.js": "4.3.0",
