--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "@loaders.gl/shapefile": "^4.1.3",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
+    "@turf/rhumb-bearing": "^6.5.0",
+    "@turf/rhumb-distance": "^6.5.0",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "dayjs": "^1.11.10",
