--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,9 @@
     "@loaders.gl/shapefile": "^4.1.3",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
+    "@turf/along": "^6.5.0",
+    "@turf/length": "^6.5.0",
+    "@turf/point-to-line-distance": "^6.5.0",
     "@turf/rhumb-bearing": "^6.5.0",
     "@turf/rhumb-distance": "^6.5.0",
     "@vis.gl/react-google-maps": "^0.8.3",
@@ -33,6 +36,7 @@
     "dayjs": "^1.11.10",
     "deck.gl": "^8.9.34",
     "dotenv": "^16.3.1",
+    "geojson-path-finder": "^2.0.2",
     "handlebars": "^4.7.8",
     "jszip": "^3.10.1",
     "leaflet": "^1.9.4",
