--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "@emotion/cache": "11.10.8",
     "@emotion/react": "11.10.8",
     "@emotion/styled": "11.10.8",
-    "@loaders.gl/core": "^3.4.15",
+    "@loaders.gl/core": "^4.2.2",
+    "@loaders.gl/kml": "^4.2.2",
     "@loaders.gl/shapefile": "^4.1.3",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.3",
@@ -33,6 +34,7 @@
     "deck.gl": "^8.9.34",
     "dotenv": "^16.3.1",
     "handlebars": "^4.7.8",
+    "jszip": "^3.10.1",
     "leaflet": "^1.9.4",
     "mapbox-gl": "^3.1.0",
     "maplibre-gl": "^2.4.0",
@@ -41,7 +43,7 @@
     "react-chartjs-2": "5.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
-    "react-map-gl": "^7.0.0",
+    "react-map-gl": "^7.1.7",
     "react-router-dom": "6.11.0",
     "react-scripts": "^5.0.1",
     "react-table": "7.8.0",
