--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,11 @@
     "url": "git+https://github.com/creativetimofficial/material-dashboard-react.git"
   },
   "dependencies": {
-    "@deck.gl/core": "^8.9.35",
-    "@deck.gl/google-maps": "^8.9.35",
-    "@deck.gl/layers": "^8.9.35",
-    "@deck.gl/mesh-layers": "^8.9.35",
+    "@deck.gl/core": "^9.0.16",
+    "@deck.gl/google-maps": "^9.0.16",
+    "@deck.gl/layers": "^9.0.16",
+    "@deck.gl/mesh-layers": "^9.0.16",
+    "@deck.gl/react": "^9.0.16",
     "@emotion/cache": "11.10.8",
     "@emotion/react": "11.10.8",
     "@emotion/styled": "11.10.8",
@@ -30,11 +31,10 @@
     "@turf/point-to-line-distance": "^6.5.0",
     "@turf/rhumb-bearing": "^6.5.0",
     "@turf/rhumb-distance": "^6.5.0",
-    "@vis.gl/react-google-maps": "^0.8.3",
+    "@vis.gl/react-google-maps": "^1.0.1",
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "dayjs": "^1.11.10",
-    "deck.gl": "^8.9.34",
     "dotenv": "^16.3.1",
     "geojson-path-finder": "^2.0.2",
     "handlebars": "^4.7.8",
