--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "url": "git+https://github.com/creativetimofficial/material-dashboard-react.git"
   },
   "dependencies": {
+    "@deck.gl/arcgis": "^9.0.16",
     "@deck.gl/core": "^9.0.16",
+    "@deck.gl/geo-layers": "^9.0.16",
     "@deck.gl/google-maps": "^9.0.16",
     "@deck.gl/layers": "^9.0.16",
     "@deck.gl/mesh-layers": "^9.0.16",
@@ -22,6 +24,7 @@
     "@emotion/react": "11.10.8",
     "@emotion/styled": "11.10.8",
     "@loaders.gl/core": "^4.2.2",
+    "@loaders.gl/json": "^4.2.2",
     "@loaders.gl/kml": "^4.2.2",
     "@loaders.gl/shapefile": "^4.1.3",
     "@mui/icons-material": "5.11.16",
@@ -35,6 +38,7 @@
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "dayjs": "^1.11.10",
+    "deck.gl": "^9.0.16",
     "dotenv": "^16.3.1",
     "geojson-path-finder": "^2.0.2",
     "handlebars": "^4.7.8",
