--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "author": "Creative Tim",
   "license": "See license in https://www.creative-tim.com/license",
   "description": "React version of Material Dashboard 2 by Creative Tim",
-  "homepage": "https://hydroinformatics.uiowa.edu/lab/dt",
+  "homepage": "https://dt.kaynak.me",
   "bugs": {
     "url": "https://github.com/creativetimofficial/material-dashboard-react/issues"
   },
