--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Material Dashboard",
-  "name": "Material Dashboard 2 React",
+  "short_name": "Digital Twin",
+  "name": "Digital Twin",
   "icons": [
     {
       "src": "favicon.png",
