--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
     "@turf/rhumb-distance": "^6.5.0",
     "@turf/turf": "^6.5.0",
     "@vis.gl/react-google-maps": "^1.0.1",
-    "chart.js": "4.3.0",
+    "chart.js": "^4.3.0",
     "chroma-js": "2.4.2",
     "dayjs": "^1.11.10",
     "deck.gl": "^9.0.16",
@@ -51,7 +51,7 @@
     "maplibre-gl": "^2.4.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
-    "react-chartjs-2": "5.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "1.4.0",
     "react-map-gl": "^7.1.7",
